syntax = "proto3";
package ecity;

option csharp_namespace = "MokomoGames.Protobuf";

message UpdateStaminaRequest 
{
    int32 diff = 1;
}

message UpdateStaminaResponse
{
    uint32 currentStamina = 1;
}

message GetPlayerSaveDataResponse
{
    PlayerSaveData saveData = 1;
}

message PlayerSaveData
{
    uint32 stamina = 1;
    uint32 yukichi = 2;
    uint32 coin = 3;
    uint32 mizu = 4;
}